[package]
name = "publiish-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
ipfs-api = "0.16"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
mysql = "24.0"
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.0"
bytes = "1.5"
futures = "0.3"