[package]
name = "publiish-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
ipfs-api = "0.17.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
mysql = "24.0"
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.0"
hyper = "0.14"
futures = "0.3"
log = "0.4"         
env_logger = "0.10"
dotenv = "0.15"
tokio-util = { version = "0.7.14", features = ["io"] }
reqwest = { version = "0.12.14", features = ["stream"] }
mysql_async = "0.34"
thiserror = "1.0"


